fixed submenu on mobile

--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -163,11 +163,11 @@ nav.stroke ul li .drop-menu:hover:after {
   z-index:2000;
 }
 
-@media all and (min-width: 992px) {
+
 	.navbar .nav-item .dropdown-menu{ display: none; }
 	.navbar .nav-item:hover .dropdown-menu{ display: block; }
 	.navbar .nav-item .dropdown-menu{ margin-top:0; width: 200px;}
-}
+
 
 
 .dropdown-content {
